fix(profile): add email account linking (#384)
